[package]
name = "rpi-music-visualizer"
version = "0.1.0"
authors = ["Steve Mostovoy <stevemostovoysm@gmail.com>"]

[dependencies]
argparse = "0.2.1"
blinkt = { version = "0.4", optional = true }
gl = "0.10"
glutin = "0.13"
rustfft = "2.0.0"
sphinxad-sys = "0.1.3"
rand = "0.5.5"

[features]
hardware = ["blinkt"]

[build-dependencies]
gl_generator = "0.14"
